--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&display=swap');
+
 @import "tailwindcss";
 
 * {
@@ -9,4 +11,8 @@
 #root {
     min-height: 100vh;
     display: flex;
+}
+
+body {
+    font-family: "Outfit", serif;
 }
